assets/css/style.css
/* index.html*/
@import url('https://fonts.googleapis.com/css2?family=Oleo+Script:wght@700&family=Rock+Salt&family=Varela+Round&display=swap');

body {
    background: #e2e1e0;
    margin: 0;
}

p,
h4 {
    font-family: 'Varela Round', sans-serif;
}

/*header*/

.nav-bar {
    list-style-type: none;
    float: right;
    display: flex;
    padding: 20px 10px 0px 20px;
    margin: 10px auto;
    font-family: 'Varela Round', sans-serif;
}

li a {
    text-decoration: none;
    margin: 5px;
    padding: 10px;
    font-size: 30px;
    color: #c45508;

}

li a:hover {
    text-decoration: underline;
}

.home-image {
    height: 80px;
    width: 80px;
    overflow: hidden;
    border-radius: 10px;
    border: none;
    margin: 0 100px;
}

/* photo section on home page */

.small-screen-heading {
    margin: 0 auto;
    width: 100%;
    text-align: center;
    visibility: hidden;
    height: 0px;
}

.mid-section {
    background: url('../images/background-image.jpg') no-repeat center center;
    background-size: cover;
    opacity: 1;
    height: 550px;
    width: 100%;
    animation-name: pic-appear;
    animation-duration: 2s;
    margin-bottom: 50px;
}

/*need to credit this */

@keyframes pic-appear {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

.heading-block {
    background-color: whitesmoke;
    font-family: 'Rock Salt', cursive;
    letter-spacing: 3px;
    text-align: center;
    opacity: 0.8;
    width: 50%;
    margin: 0;
    position: relative;
    top: 10%;
    left: 2%;
    animation-name: text-appear;
    animation-duration: 5s;
    display: inline-block;
    color: #c45508;
}

.heading-block>h2 {
    font-size: 2em;
    font-weight: bolder;
}

.heading-block>p {
    font-family: 'Varela Round', sans-serif;
    letter-spacing: 1.5px;
}

@keyframes text-appear {
    from {
        opacity: 0;
    }

    to {
        opacity: 0.8;
    }
}

main h2,
section h2 {
    color: #c45508;
    font-family: 'Rock Salt', cursive;

}

/*article*/
article {
    margin: 0 7.5%;
    padding: 10px;
    border-radius: 10px;
}

article div {
    display: inline-block;
    vertical-align: top;
}

#description {
    width: 60%;
    margin-right: 2%;
}

#printing-image {
    width: 35%;
}

#printing-image-block {
    height: 350px;
    width: 275px;
    border-radius: 10px;
    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
}

/*die hard section*/

#die-hard {
    padding: 10px 10px 100px 10px;
}

#die-hard div {
    vertical-align: top;
    display: inline-block;
}

#die-hard-tees {
    width: 45%;
    height: 390px;
}

#tee-imgs {
    text-align: right;
}

#die-hard-tees img {
    width: 32%;
    height: 290px;
    border-radius: 5px;
    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);

}

#die-hard-vid {
    width: 45%;
    height: 390px;
    margin-left: 7.5%;
}

.orange {
    border-top: 2px dashed #c45508;
    border-bottom: 2px dashed #c45508;
}

.p-break {
    font-weight: bold;
    font-size: 2em;
    color: #c45508;
}

#tour-video {
    margin: 5px 7.5%;
    text-align: center;
}

/*footer*/

footer {
    height: 100px;
    margin: 2% 7.5%;
    border-top: 2px dashed #c45508;
}

.social-media {
    text-align: center;
    padding-top: 10px;
    height: 100px;
    padding-inline-start: 0;

}

.social-media li {
    display: inline;
    padding: 10px 10px 0 10px;
}

/*credit*/

/*store.html*/
main {
    margin: 0 7.5%;
    padding: 0;
    border: none;
}

.row {
    display: flex;
    justify-content: space-around;
}

.row div {
    height: 500px;
    width: 45%;
    margin: 1% 5%;
    padding: 2% 0 2% 0;
    text-align: center;
    border-radius: 10px;
}

.store-pic {
    width: 65%;
    height: 80%;
    border-radius: 10px;
    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
    /* credit https://codepen.io/sdthornton/pen/wBZdXq */
}

.inner-row {
    height: 45%;
    border-radius: 5px;
    width: 80%;
    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
}

.shop-text {
    text-align: center;
    margin: 0% 7.5%;
}



#gallery {
    clear: both;
    line-height: 0;
    column-count: 4;
    column-gap: 0px;
}

#gallery>img {
    width: 100%;
}

/*enquire.html*/

.sign-up-form {
    max-width: 400px;
    max-height: 1000px;
    margin: 5%;
    font-family: 'Varela Round', sans-serif;
}

#form-background {
    background-color: rgba(245, 245, 245, 0.8);
    position: relative;
    left: 66%;
    top: 3%;
    width: 33%;
    padding-bottom: 1px;
    border-radius: 5px;
}

input:hover,
textarea:hover {
    background-color: beige;
}

input:focus,
textarea:focus {
    background-color: beige;
}

button {
    font-family: 'Varela Round', sans-serif;
}

#contact {
    margin: 5%;
    text-align: center;
    border-top: 2px dashed #c45508;
}

#small-screen-form {
    visibility: hidden;
    height: 0px;
    width: 0px;
}

#contact-heading {
    font-size: 200%;
}

/* Media Queries*/
/*From 700px down*/
@media screen and (max-width:700px) {
    header {
        display: block;
    }

    section {
        margin: 0 auto;
    }

    .logo {
        width: 100%;
        float: left;
        text-align: center;
        margin: 0;
        padding: 0;
    }

    .nav-bar {
        width: 100%;
        justify-content: center;
        margin: 0;
        padding: 0;
    }

    .small-screen-heading {
        visibility: visible;
        height: 140px;
        float: left;
        clear: left;
        margin-bottom: 50px;
    }

    .heading-block {
        visibility: hidden;
        position: absolute;
    }

    .mid-section {
        visibility: hidden;
        height: 0px;
        width: 0px;
    }

    article {
        text-align: center;
    }

    #printing-image {
        width: 0px;
        visibility: hidden;
        float: left;
    }

    #die-hard {
        width: 100%;
        margin: 0 auto;
    }

    #die-hard-tees,
    #die-hard-vid {
        min-width: 100%;
        display: block;
        padding: 0;
        clear: both;
    }

    #die-hard-tees>div {
        width: 100%;
    }

    #die-hard-tees img {
        width: 31%;
    }



    #tour-video {
        margin: 0 auto;
        justify-content: center;
    }

    #fb-vid {
        width: max-content;
    }

    /*store.html*/

    .row {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .store-pic {
        width: 115%;
    }

    /*enquire*/
    #small-screen-form {
        min-width: 100%;
    }

    .sign-up-form {
        margin: 0 auto;
    }

    #map {
        max-width: 100%;
    }

    #gallery {
        column-count: 3;
    }
}

/*For larger to medium screens size from 1200px wide and down */
@media screen and (max-width:1200px) {



    main {
        margin: 0 auto;
    }

    #die-hard {

        margin: 0 auto;
        height: fit-content;
        display: block;
        padding: 0;
        text-align: center;
    }

    #die-hard-tees,
    #die-hard-vid {
        padding: 0;
        width: 85%;
        text-align: center;
        display: block;
        margin: 0 auto;
        height: fit-content;
    }

    #die-hard-vid iframe {
        height: 350px;
    }

    /*store.html*/

    #gallery {
        column-count: 3;
    }

    /*enquire.html*/

    #form-background {
        visibility: hidden;
        height: 0px;
        width: 0px;
        left: 0%;
    }

    #small-screen-form {
        height: 500px;
        margin: 0 auto;
        visibility: visible;
        width: 50%;
        padding-bottom: 20px;
        border-radius: 5px;
        text-align: center;
    }
}

